@@ -27,6 +27,9 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+03-Oct-2011 Christophe Demko
+ # [#26915] Remove Specific Author Information from Bluestork (Jean-Marie Simonet)
+
 01-Oct-2011 Christophe Demko
  # [#26813] Misplaced Bracket on Language Titles in Multilingual Sites Using RTL Language (James Brice)
 
